// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Merge includes (md2md) > basic: simple include is inlined > filelist 1`] = `
"[
  "index.md",
  "main.md",
  "toc.yaml"
]"
`;

exports[`Merge includes (md2md) > basic: simple include is inlined 1`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
vcsPath: index.md
---
# Index

Welcome page.
"
`;

exports[`Merge includes (md2md) > basic: simple include is inlined 2`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
vcsPath: main.md
---
# Main Document

Content before include.

<!-- source: _includes/simple.md -->
## Included Section

This is the included content.
<!-- endsource: _includes/simple.md -->

Content after include.
"
`;

exports[`Merge includes (md2md) > basic: simple include is inlined 3`] = `
"title: Merge Includes Basic
href: index.md
items:
  - name: Main
    href: main.md
path: toc.yaml
"
`;

exports[`Merge includes (md2md) > hash-section: includes with hash extract sections inline > filelist 1`] = `
"[
  "index.md",
  "main.md",
  "toc.yaml"
]"
`;

exports[`Merge includes (md2md) > hash-section: includes with hash extract sections inline 1`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
vcsPath: index.md
---
# Hash Fallback Test
"
`;

exports[`Merge includes (md2md) > hash-section: includes with hash extract sections inline 2`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
vcsPath: main.md
---
# Main Document

<!-- source: _includes/sections.md -->
{% list tabs %}

- Tab 1

    \`\`\`
    # Heading inside code
    \`\`\`

    Content of tab 1.

{% endlist %}
<!-- endsource: _includes/sections.md -->

<!-- source: _includes/sections.md -->
Content of section B.
<!-- endsource: _includes/sections.md -->
"
`;

exports[`Merge includes (md2md) > hash-section: includes with hash extract sections inline 3`] = `
"title: Hash Fallback Test
href: index.md
items:
  - name: Main
    href: main.md
path: toc.yaml
"
`;

exports[`Merge includes (md2md) > hash-section-html: hash-section include in list is inlined when only other section has <style> > filelist 1`] = `
"[
  "index.md",
  "main.md",
  "toc.yaml"
]"
`;

exports[`Merge includes (md2md) > hash-section-html: hash-section include in list is inlined when only other section has <style> 1`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
vcsPath: index.md
---
# Index

Welcome page.
"
`;

exports[`Merge includes (md2md) > hash-section-html: hash-section include in list is inlined when only other section has <style> 2`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
vcsPath: main.md
---
# Main Document

Content before list.

1. First item

2. Second item with hash-section include (section has no HTML, but other section in same file does):

   <!-- source: _includes/mixed.md -->
   Just plain text content without any HTML blocks.
   <!-- endsource: _includes/mixed.md -->

3. Third item

Content after list.
"
`;

exports[`Merge includes (md2md) > hash-section-html: hash-section include in list is inlined when only other section has <style> 3`] = `
"title: Merge Includes Hash Section HTML
href: index.md
items:
  - name: Main
    href: main.md
path: toc.yaml
"
`;

exports[`Merge includes (md2md) > html-comment-blanks: blank lines inside HTML comments keep list/cut continuity > filelist 1`] = `
"[
  "index.md",
  "main.md",
  "toc.yaml"
]"
`;

exports[`Merge includes (md2md) > html-comment-blanks: blank lines inside HTML comments keep list/cut continuity 1`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
vcsPath: index.md
---
# Index

Welcome page.
"
`;

exports[`Merge includes (md2md) > html-comment-blanks: blank lines inside HTML comments keep list/cut continuity 2`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
vcsPath: main.md
---
# Main

Intro paragraph.

- Item one with cut

   {% cut "Examples" %}

   <!-- source: _includes/examples.md -->
   - [Real link one](https://example.com/one)

   - [Real link two](https://example.com/two)

   <!--
   #|
   ||
   **Header A**
    |
   **Header B**
   ||
   
   ||
   Body cell A1
   
   with blank lines inside the comment
   
   |
   Body cell B1
   ||
   
   ||
   Body cell A2
   |
   Body cell B2
   ||
   |# -->
   <!-- endsource: _includes/examples.md -->

   {% endcut %}

- Item two

After list paragraph that must still render.
"
`;

exports[`Merge includes (md2md) > html-comment-blanks: blank lines inside HTML comments keep list/cut continuity 3`] = `
"title: Merge Includes HTML Comment Blanks
href: index.md
items:
  - name: Main
    href: main.md
path: toc.yaml
"
`;

exports[`Merge includes (md2md) > html-in-list: include with <style> in list (any indent) uses fallback > filelist 1`] = `
"[
  "index.md",
  "main.md",
  "toc.yaml"
]"
`;

exports[`Merge includes (md2md) > html-in-list: include with <style> in list (any indent) uses fallback 1`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
vcsPath: index.md
---
# Index

Welcome page.
"
`;

exports[`Merge includes (md2md) > html-in-list: include with <style> in list (any indent) uses fallback 2`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
vcsPath: main.md
---
# Main Document

Content before list.

- List item with inline include (any non-zero indent → HTML block must use fallback)

   {% include [styles](_includes/styles.md) %}

- Another list item

Content after list.

{% included (_includes/styles.md) %}
<style>

.yfm .highlight {
    background: yellow;
}

</style>

{% endincluded %}"
`;

exports[`Merge includes (md2md) > html-in-list: include with <style> in list (any indent) uses fallback 3`] = `
"title: Merge Includes HTML in List
href: index.md
items:
  - name: Main
    href: main.md
path: toc.yaml
"
`;

exports[`Merge includes (md2md) > include-after-fence: include placed right after a closing \`\`\` fence is inlined > filelist 1`] = `
"[
  "index.md",
  "main.md",
  "toc.yaml"
]"
`;

exports[`Merge includes (md2md) > include-after-fence: include placed right after a closing \`\`\` fence is inlined 1`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
vcsPath: index.md
---
# Index

Welcome page.
"
`;

exports[`Merge includes (md2md) > include-after-fence: include placed right after a closing \`\`\` fence is inlined 2`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
vcsPath: main.md
---
# Main

Some intro text.

\`\`\`javascript
<script type="text/javascript">
function setCookie(name, value){
    document.cookie = name + "=" + value + ";path=/";
}
</script>
\`\`\`
<!-- source: _includes/chat-button.md -->
[Написать в чат](https://example.com/chat){.button}
<!-- endsource: _includes/chat-button.md -->

<!-- source: _includes/footer.md -->
Footer text.
<!-- endsource: _includes/footer.md -->
"
`;

exports[`Merge includes (md2md) > include-after-fence: include placed right after a closing \`\`\` fence is inlined 3`] = `
"title: Include After Fence
href: index.md
items:
  - name: Main
    href: main.md
path: toc.yaml
"
`;

exports[`Merge includes (md2md) > include-in-code-block: include shown as code example is NOT expanded > filelist 1`] = `
"[
  "index.md",
  "main.md",
  "toc.yaml"
]"
`;

exports[`Merge includes (md2md) > include-in-code-block: include shown as code example is NOT expanded 1`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
vcsPath: index.md
---
# Index

Welcome page.
"
`;

exports[`Merge includes (md2md) > include-in-code-block: include shown as code example is NOT expanded 2`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
vcsPath: main.md
---
# Main

Real include below — should be inlined:

<!-- source: _includes/glossary.md -->
[*glossary]: Glossary section
<!-- endsource: _includes/glossary.md -->

Steps:

1. Open the resource file.
1. Insert the include directive into the file:

    \`\`\`plaintext
    {% include notitle [glossary](_includes/glossary.md) %}
    [*glossary]: Magic line
    \`\`\`

1. Use the keys from glossary.

End of page.
"
`;

exports[`Merge includes (md2md) > include-in-code-block: include shown as code example is NOT expanded 3`] = `
"title: Include In Code Block
href: index.md
items:
  - name: Main
    href: main.md
path: toc.yaml
"
`;

exports[`Merge includes (md2md) > indent-paragraph: include under indent with indented top-level paragraph falls back to {% included %} > filelist 1`] = `
"[
  "index.md",
  "main.md",
  "toc.yaml"
]"
`;

exports[`Merge includes (md2md) > indent-paragraph: include under indent with indented top-level paragraph falls back to {% included %} 1`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
vcsPath: index.md
---
# Index

Welcome page.
"
`;

exports[`Merge includes (md2md) > indent-paragraph: include under indent with indented top-level paragraph falls back to {% included %} 2`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
vcsPath: main.md
---
# Main Document

{% list tabs %}

- Mobile banner


    {% include [requirements](_includes/requirements.md) %}

    For more details see the requirements page.

{% endlist %}

{% included (_includes/requirements.md) %}
1/. Format: HTML5.

2/. The banner stretches to fit the screen.

3/. The banner must stretch to 100% of the screen width.

  Width is set as a percentage value: 100%.

4/. Maximum archive size is 75 KB.

{% endincluded %}"
`;

exports[`Merge includes (md2md) > indent-paragraph: include under indent with indented top-level paragraph falls back to {% included %} 3`] = `
"title: Merge Includes Indent Paragraph In Include
href: index.md
items:
  - name: Main
    href: main.md
path: toc.yaml
"
`;

exports[`Merge includes (md2md) > inline-context: non-standalone includes use fallback > filelist 1`] = `
"[
  "index.md",
  "main.md",
  "toc.yaml"
]"
`;

exports[`Merge includes (md2md) > inline-context: non-standalone includes use fallback 1`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
vcsPath: index.md
---
# Index

Welcome page.
"
`;

exports[`Merge includes (md2md) > inline-context: non-standalone includes use fallback 2`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
vcsPath: main.md
---
# Document with inline includes

Standalone include (should be inlined):

<!-- source: _includes/snippet.md -->
## Note Content {#note}

This is an important note.

With multiple lines.
<!-- endsource: _includes/snippet.md -->

Inline in text (should fallback): See {% include [note](_includes/snippet.md#note) %} for details.

Standalone table include (should be inlined):

<!-- source: _includes/snippet.md -->
## Table Content {#table}

#|
|| Header 1 | Header 2 ||
|| Cell 1 | Cell 2 ||
|#
<!-- endsource: _includes/snippet.md -->

{% included (_includes/snippet.md) %}
## Note Content {#note}

This is an important note.

With multiple lines.

## Table Content {#table}

#|
|| Header 1 | Header 2 ||
|| Cell 1 | Cell 2 ||
|#

{% endincluded %}"
`;

exports[`Merge includes (md2md) > inline-context: non-standalone includes use fallback 3`] = `
"title: Merge Includes Inline Context
href: index.md
items:
  - name: Main
    href: main.md
path: toc.yaml
"
`;

exports[`Merge includes (md2md) > nested: outer inlined, inner as fallback > filelist 1`] = `
"[
  "index.md",
  "main.md",
  "toc.yaml"
]"
`;

exports[`Merge includes (md2md) > nested: outer inlined, inner as fallback 1`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
vcsPath: index.md
---
# Index

Welcome page.
"
`;

exports[`Merge includes (md2md) > nested: outer inlined, inner as fallback 2`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
vcsPath: main.md
---
# Main Document

Before outer include.

<!-- source: _includes/outer.md -->
## Outer Section

Content from outer include.

<!-- source: _includes/inner.md -->
### Inner Section

Content from inner include.
<!-- endsource: _includes/inner.md -->

End of outer include.
<!-- endsource: _includes/outer.md -->

After outer include.
"
`;

exports[`Merge includes (md2md) > nested: outer inlined, inner as fallback 3`] = `
"title: Merge Includes Nested
href: index.md
items:
  - name: Main
    href: main.md
path: toc.yaml
"
`;

exports[`Merge includes (md2md) > relative-paths: inlined content has rebased paths > filelist 1`] = `
"[
  "index.md",
  "main.md",
  "toc.yaml"
]"
`;

exports[`Merge includes (md2md) > relative-paths: inlined content has rebased paths 1`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
vcsPath: index.md
---
# Index

Welcome page.
"
`;

exports[`Merge includes (md2md) > relative-paths: inlined content has rebased paths 2`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
vcsPath: main.md
---
# Main Document

<!-- source: _includes/sub/with-links.md -->
## Section With Links

See [the guide](_includes/guide.md) for more details.

![diagram](_includes/sub/images/diagram.png)

[ref-link]: _includes/reference.md "Reference"
<!-- endsource: _includes/sub/with-links.md -->
"
`;

exports[`Merge includes (md2md) > relative-paths: inlined content has rebased paths 3`] = `
"title: Merge Includes Relative Paths
href: index.md
items:
  - name: Main
    href: main.md
path: toc.yaml
"
`;

exports[`Merge includes (md2md) > term-extract: dep with terms → terms extracted, content inlined (Step 4) > filelist 1`] = `
"[
  "index.md",
  "main.md",
  "toc.yaml"
]"
`;

exports[`Merge includes (md2md) > term-extract: dep with terms → terms extracted, content inlined (Step 4) 1`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
vcsPath: index.md
---
# Index

Welcome page.
"
`;

exports[`Merge includes (md2md) > term-extract: dep with terms → terms extracted, content inlined (Step 4) 2`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
vcsPath: main.md
---
# API Docs

Use the [API](*api) and [SDK](*sdk) to build apps.

<!-- source: _includes/chapter.md -->
## Chapter

Chapter content with [link](_includes/local.md).
<!-- endsource: _includes/chapter.md -->

[*api]: Application Programming Interface

[*sdk]: Software Development Kit"
`;

exports[`Merge includes (md2md) > term-extract: dep with terms → terms extracted, content inlined (Step 4) 3`] = `
"title: Merge Includes Term Extract
href: index.md
items:
  - name: Main
    href: main.md
path: toc.yaml
"
`;

exports[`Merge includes (md2md) > term-inline: includes inside term defs use fallback (not inlined) > filelist 1`] = `
"[
  "index.md",
  "main.md",
  "toc.yaml"
]"
`;

exports[`Merge includes (md2md) > term-inline: includes inside term defs use fallback (not inlined) 1`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
vcsPath: index.md
---
# Index

Welcome page.
"
`;

exports[`Merge includes (md2md) > term-inline: includes inside term defs use fallback (not inlined) 2`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
vcsPath: main.md
---
# API Reference

Метод возвращает данные для [площадки](*placeID).

Параметр [тип синхронизации](*syncFactor) указывает вид кода.

Параметр [обязательный](*requiredParam) является обязательным.

Обычный инклюд на отдельной строке (до термов — инлайнится):

<!-- source: _includes/defs.md -->
## Required {#requiredParam}

Обязательный параметр.
<!-- endsource: _includes/defs.md -->

[*placeID]: ID площадки.

Читайте также:

- [Получить список](list.md)

[*syncFactor]: Вид кода.

Допустимые значения:

- \`1\` — асинхронный;
- \`2\` — синхронный.

[*requiredParam]: Обязательный параметр.
    
ID площадки.

Читайте также:

- [Получить список](list.md)"
`;

exports[`Merge includes (md2md) > term-inline: includes inside term defs use fallback (not inlined) 3`] = `
"title: Merge Includes Term Inline
href: index.md
items:
  - name: Main
    href: main.md
path: toc.yaml
"
`;

exports[`Merge includes (md2md) > without flag: includes are NOT merged > filelist 1`] = `
"[
  "_includes/simple-hash.md",
  "index.md",
  "main.md",
  "toc.yaml"
]"
`;

exports[`Merge includes (md2md) > without flag: includes are NOT merged 1`] = `
"## Included Section

This is the included content.
"
`;

exports[`Merge includes (md2md) > without flag: includes are NOT merged 2`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
vcsPath: index.md
---
# Index

Welcome page.
"
`;

exports[`Merge includes (md2md) > without flag: includes are NOT merged 3`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
vcsPath: main.md
---
# Main Document

Content before include.

{% include [simple-include](_includes/simple-hash.md) %}

Content after include.
"
`;

exports[`Merge includes (md2md) > without flag: includes are NOT merged 4`] = `
"title: Merge Includes Basic
href: index.md
items:
  - name: Main
    href: main.md
path: toc.yaml
"
`;

exports[`Merge includes (md2md) > yfm-table: include ending with HTML block places || on its own line > filelist 1`] = `
"[
  "index.md",
  "main.md",
  "toc.yaml"
]"
`;

exports[`Merge includes (md2md) > yfm-table: include ending with HTML block places || on its own line 1`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
vcsPath: index.md
---
# Index

Welcome page.
"
`;

exports[`Merge includes (md2md) > yfm-table: include ending with HTML block places || on its own line 2`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
vcsPath: main.md
---
# Main Document

#|
|| **Option** | **Details** ||
|| Option A |
Some description of option A.

[Subscribe](https://example.com/subscribe){.button}

<style>
a.button {
  color: black;
  background: yellow;
}
</style>
||
|| Option B | Plain text cell. ||
|#

Content after table.
"
`;

exports[`Merge includes (md2md) > yfm-table: include ending with HTML block places || on its own line 3`] = `
"title: Merge Includes YFM Table HTML Block
href: index.md
items:
  - name: Main
    href: main.md
path: toc.yaml
"
`;

exports[`Merge includes (md2md) > yfm-table: include followed by || separator is inlined > filelist 1`] = `
"[
  "index.md",
  "main.md",
  "toc.yaml"
]"
`;

exports[`Merge includes (md2md) > yfm-table: include followed by || separator is inlined 1`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
vcsPath: index.md
---
# Index

Welcome page.
"
`;

exports[`Merge includes (md2md) > yfm-table: include followed by || separator is inlined 2`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
vcsPath: main.md
---
# Main Document

#|
|| **Option** | **Details** ||
|| Option A |
Some description of option A.

Buy now at [our store](https://example.com/store).
||
|| Option B | Plain text cell. ||
|#

Content after table.
"
`;

exports[`Merge includes (md2md) > yfm-table: include followed by || separator is inlined 3`] = `
"title: Merge Includes YFM Table
href: index.md
items:
  - name: Main
    href: main.md
path: toc.yaml
"
`;

exports[`Merge includes (md2md) > yfm-table: include with \`|\` in inline code falls back to {% included %} > filelist 1`] = `
"[
  "index.md",
  "main.md",
  "toc.yaml"
]"
`;

exports[`Merge includes (md2md) > yfm-table: include with \`|\` in inline code falls back to {% included %} 1`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
vcsPath: index.md
---
# Index

Welcome page.
"
`;

exports[`Merge includes (md2md) > yfm-table: include with \`|\` in inline code falls back to {% included %} 2`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
vcsPath: main.md
---
# Main Document

#|
||
**Criterion**
|
**Description**
||
||
**regular expression**
|
This is used for tracking goal identifiers that match a pattern.

{% cut "Example" %}

{% include [example](_includes/example.md) %}

{% endcut %}
||
|#

Content after table.

{% included (_includes/example.md) %}
If you want to track clicking a particular button with the ID that contains \`button\` or \`buy\`, you can specify the following condition: \`button|buy\`.

{% endincluded %}"
`;

exports[`Merge includes (md2md) > yfm-table: include with \`|\` in inline code falls back to {% included %} 3`] = `
"title: Merge Includes YFM Table Pipe In Content
href: index.md
items:
  - name: Main
    href: main.md
path: toc.yaml
"
`;
